# test-django

./: .env.dev  DockerFile  docker-compose.yml  pyproject.toml
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
test/: settings.py  urls.py
